@@ -1,6 +1,5 @@
 TODO / Feature list
 + Export and import of your data
-+ DB backup on the tables used in insipid and not whole db
 + snapshots
 + bookmark js snippet
 + theme support
