@@ -1,6 +1,7 @@
 version x.x - Seven Portals (tba)
 
     + Now including update instructions
+    + DB export only insipid tables and not the whole DB itself.
     + Fixed the search for words. See update instructions how to correct your data
 
 version 2.3 - Guardian of Steel (2019-12-30)
